--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ p {
 #hero-wrapper {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     width: 100vw;
     height: 100vh;
     overflow:hidden
@@ -82,6 +83,7 @@ p {
 
 /*Defines the left width of the hero section*/
 #left-hero-wrapper {
+    flex-grow: 1;
     padding-top: 10vh;
     display: flex;
     width: 45%;
@@ -92,7 +94,7 @@ p {
 #pass-content-wrapper {
     margin-right: 15%;
     max-width: 600px;
-    width: 80%;
+    width: 100%;
 }
 
 /*Form container*/
@@ -160,7 +162,8 @@ p {
     margin-top: 45px;
     display: flex;
     flex-direction: row;
-    width: 80%;
+    width: 100%;
+    max-width: 500px;
 }
 
 .countdown-timestamp-container {
@@ -168,12 +171,12 @@ p {
     text-align: center;
 }
 
-#days-container {
+.days-container {
     width: 15%;
     text-align: left;
 }
 
-#days-container h3 {
+.days-container h3 {
     padding-left: 5px
 }
 
@@ -186,6 +189,8 @@ p {
 }
 
 #right-hero-wrapper {
+    flex-grow: 1;
+    min-width: 500px;
     width: 55%;
     display: flex;
     justify-content: flex-end;
@@ -306,19 +311,20 @@ p {
 #clients-wrapper {
     align-self:center;
     display: flex;
-    flex-flow: row;
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 100%;
     height: 40%;
     max-width: 1800px;
 }
 
 .client-container {
-    min-width: 250px;
+    min-width: 380px;
     margin-left: 30px;
     margin-right: 30px;
     display: flex;
     flex-direction: row;
-    width: 25%;
+    width: calc(25% - 60px);
     height: 100%;
     justify-content: center;
     background-color: aqua;
@@ -341,12 +347,11 @@ p {
     height: auto;
 }
 
-/*Virtual pass content section*/
+/*Virtual pass content section 'What's Included*/
 
 #whats-included-section-wrapper {
     width: 100%;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-content: center;
 }
@@ -356,10 +361,11 @@ p {
     max-width: 1800px;
     display: flex;
     flex-direction: row;
+    flex-flow: row wrap;
 }
 
 #whats-inluded-left-wrapper {
-    width: 70%;
+    width: 40%;
 }
 
 #whats-inluded-left-wrapper img {
@@ -369,7 +375,8 @@ p {
 }
 
 #whats-inluded-right-wrapper {
-    width: 100%;
+    min-width: 500px;
+    width: 60%;
     display: flex;
     flex-direction: row;
 }
@@ -385,4 +392,54 @@ p {
 
 #whats-included-content-container img {
     width: 40px;
+}
+
+
+/*Be Quick Section*/
+
+#be-quick-section-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+#be-quick-wrapper {
+    width: 100%;
+    max-width: 1800px;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+#be-quick-left-wrapper {
+    min-width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    padding-right: 10%;
+}
+
+
+#countdown-clock-wrapper-2 {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    max-width: 500px;
+}
+
+#be-quick-content-container h2{
+    margin-bottom: 20px;
+}
+
+
+#be-quick-right-wrapper {
+    min-width: 400px;
+    width: 45%;
+}
+
+#be-quick-right-wrapper img {
+    width: 100%;
+    height: 100:
 }
