--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,23 @@ h4 {
     color: #757575;
 }
 
+h5 {
+    font-family: "Circular Std Black";
+    text-transform: uppercase;
+    font-size: 26px;
+    line-height: 33px;
+    color: #000000;
+}
+
+h6 {
+    font-family: "Circular Std Bold";
+    text-transform: uppercase;
+    font-size: 170px;
+    line-height: 215px;
+    color: #757575;
+    opacity: 2%;
+}
+
 p {
     font-family: "Circular Std Book";
     font-size: 18px;
@@ -395,6 +412,7 @@ p {
 }
 
 
+
 /*Be Quick Section*/
 
 #be-quick-section-wrapper {
@@ -441,5 +459,65 @@ p {
 
 #be-quick-right-wrapper img {
     width: 100%;
-    height: 100:
+    height: 100%:
+}
+
+
+/*What's the process section*/
+#the-process-section-wrapper {
+    margin-top: 100px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    background-image: url(assets/curved-rectangle-2.svg);
+    background-size: cover;
+}
+
+#the-process-content-wrapper {
+    margin-top: 20vh;
+    margin-bottom: 20vh;
+    width: 100%;
+    height: auto;
+    max-width: 1800px;
+    display: flex;
+    align-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#process-heading-container {
+    width: 100%;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+
+.process-container {
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 400px;
+    width: 100%;
+    text-align: center;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.process-container img {
+    z-index: 1;
+    margin-bottom: -150px;
+}
+
+.process-container h6 {
+    z-index: 0;
+    margin-left: 150px;
+}
+
+.process-container h5 {
+    margin-bottom: 20px;
 }
