--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,3 @@
-/*Import Local Fonts*/
-/*
-@font-face {
-  font-family: "Circular Std Black";
-  src:  url("CircularStdBlack/CircularStdBlack.woff2") format("woff2"),
-        url("CircularStdBlack/CircularStdBlack.woff") format("woff");
-}
-
-@font-face {
-  font-family: "Circular Std Bold";
-  src:  url("CircularStdBold/CircularStdBold.woff2") format("woff2"),
-        url("CircularStdBold/CircularStdBold.woff") format("woff");
-}
-
-@font-face {
-  font-family: "Circular Std Medium";
-  src:  url("CircularStdMedium/CircularStdMedium.woff2") format("woff2"),
-        url("CircularStdMedium/CircularStdMedium.woff") format("woff");
-}
-
-@font-face {
-  font-family: "Circular Std Book";
-  src:  url("CircularStdBook/CircularStdBook.woff2") format("woff2"),
-        url("CircularStdBook/CircularStdBook.woff") format("woff");
-}
-*/
-
-
 /*Importing Online Fonts*/
 @font-face {font-family: "Circular Std Book"; src: url("//db.onlinewebfonts.com/t/860c3ec7bbc5da3e97233ccecafe512e.eot"); src: url("//db.onlinewebfonts.com/t/860c3ec7bbc5da3e97233ccecafe512e.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/860c3ec7bbc5da3e97233ccecafe512e.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/860c3ec7bbc5da3e97233ccecafe512e.woff") format("woff"), url("//db.onlinewebfonts.com/t/860c3ec7bbc5da3e97233ccecafe512e.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/860c3ec7bbc5da3e97233ccecafe512e.svg#Circular Std Book") format("svg"); }
 
@@ -36,6 +8,9 @@
 @font-face {font-family: "Circular Std Medium"; src: url("//db.onlinewebfonts.com/t/9475d6a0b79c164f9f605673714e75d9.eot"); src: url("//db.onlinewebfonts.com/t/9475d6a0b79c164f9f605673714e75d9.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/9475d6a0b79c164f9f605673714e75d9.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/9475d6a0b79c164f9f605673714e75d9.woff") format("woff"), url("//db.onlinewebfonts.com/t/9475d6a0b79c164f9f605673714e75d9.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/9475d6a0b79c164f9f605673714e75d9.svg#Circular Std Medium") format("svg"); }
 
 
+body {
+    width: 100vw;
+}
 
 /*Default properties*/
 * {
@@ -244,7 +219,7 @@ p a{
 }
 
 #top-image {
-    background-image: url(assets/Skyline-Party.jpg);
+    background-image: url(assets/grid-images/skybar-party-grid-image.jpg);
     margin-top: -20%;
     margin-left: 20%;
     width: 100%;
@@ -267,7 +242,7 @@ p a{
 }
 
 #grid-image-2 {
-    background-image: url(assets/business-thumb-4.jpg);
+    background-image: url(assets/grid-images/rooftop-party-grid-image.jpg);
     background-size: cover;
     width: 100%;
     height: 35%;
@@ -278,7 +253,7 @@ p a{
 #grid-image-4 {
     margin-top: 10%;
     margin-left: 30%;
-    background-image: url(assets/fire-frestival-shot.jpg);
+    background-image: url(assets/grid-images/festival-fire-grid-image.jpg);
     background-size: cover;
     width: 70%;
     height: 40%;
@@ -294,7 +269,7 @@ p a{
     height: 40%;
     width: 100%;
     margin-left: 5%;
-    background-image: url(assets/200310%20FRAT-1.jpg);
+    background-image: url(assets/grid-images/frat-cheerleaders-grid-image.jpg);
     background-size: cover;
     border-radius: 10px;
     box-shadow: -15px 15px 19px 0 rgba(0,0,0,0.25);
@@ -305,7 +280,7 @@ p a{
     width: 100%;
     margin-left: 5%;
     margin-top: 5%;
-    background-image: url(assets/Summer-75.jpg);
+    background-image: url(assets/grid-images/college-party-grid-image.jpg);
     background-size: cover;
     border-radius: 10px;
     box-shadow: -15px 15px 19px 0 rgba(0,0,0,0.25);
@@ -316,7 +291,7 @@ p a{
     width: 50%;
     margin-left: 5%;
     margin-top: 5%;
-    background-image: url(assets/49089581_2158272054238013_1275622080234127360_n.jpg);
+    background-image: url(assets/grid-images/lost-bottles-grid-image.jpg);
     background-size: cover;
     border-radius: 10px;
     box-shadow: -15px 15px 19px 0 rgba(0,0,0,0.25);
@@ -353,9 +328,9 @@ p a{
 
 .client-container {
     width: 25%;
-    margin-bottom: 80px;
-    margin-right: 25px;
-    margin-left: 25px;
+    margin-bottom: 5%;
+    margin-right: 1%;
+    margin-left: 1%;
     display: flex;
     flex-direction: row;
     width: calc(25% - 50px;);
@@ -590,7 +565,7 @@ p a{
 }
 
 #we-work-with-title-container {
-    margin-bottom: 8vh;;
+    margin-bottom: 8vh;
     width: 100%;
     text-align: center;
 }
